@@ -44,8 +44,10 @@ extern void caml_free_shared_libs(void);
 /* Return the effective location of the standard library */
 extern const char_os * caml_get_stdlib_location(void);
 
-/* Parse ld.conf and add the lines read to caml_shared_libs_path */
-extern char_os * caml_parse_ld_conf(void);
+/* Parse all the ld.conf files and add the lines read to caml_shared_libs_path.
+   Returns a null-terminated array of pointers which requiring freeing when
+   caml_shared_libs_path is finished with. */
+extern char_os ** caml_parse_ld_conf(void);
 
 #endif /* CAML_INTERNALS */
 
