@@ -145,6 +145,12 @@ CAMLextern value caml_win32_xdg_defaults(void);
 
 CAMLextern value caml_win32_get_temp_path(void);
 
+#define CAML_DIR_SEP T("\\")
+
+#else
+
+#define CAML_DIR_SEP "/"
+
 #endif /* _WIN32 */
 
 /* Returns the current value of a counter that increments once per nanosecond.
